[package]
description = "Parser for the RADIUS protocol"
license = "MIT/Apache-2.0"
keywords = ["RADIUS","parser","nom"]
homepage = "https://github.com/rusticata/radius-parser"
repository = "https://github.com/rusticata/radius-parser.git"
name = "radius-parser"
version = "0.2.0"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
categories = ["parsing"]

[dependencies]
nom = "5.0"

[badges]
travis-ci = { repository = "rusticata/radius-parser" }
