[package]
description = "Parser for the RADIUS protocol"
license = "MIT/Apache-2.0"
keywords = ["RADIUS","parser","nom"]
homepage = "https://github.com/rusticata/radius-parser"
repository = "https://github.com/rusticata/radius-parser.git"
name = "radius-parser"
version = "0.4.1"
authors = ["Pierre Chifflier <chifflier@wzdftpd.net>"]
readme = "README.md"
categories = ["network-programming", "parser-implementations"]
edition = "2018"

[dependencies]
nom = "6.0"
